k8s/nzbget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      name: nzbget
      labels:
        app: nzbget
    spec:
      containers:
      - name: nzbget
        image: lscr.io/linuxserver/nzbget:latest
        imagePullPolicy: Always
        ports:
          - name: nzbget
            containerPort: 6789
        volumeMounts:
        - mountPath: "/config"
          name: nzbget-config
        - mountPath: "/downloads/completed"
          name: completed-downloads
      nodeSelector:
        nzbget: "true"
      volumes:
      - name: nzbget-config
        iscsi:
          targetPortal: 10.10.11.5:3260
          iqn: iqn.2000-01.com.synology:Library.nzbget-config
          lun: 1
          fsType: ext4
          readOnly: false
      - name: completed-downloads
        nfs:
          server: library.faircloth.ca
          path: /volume1/downloads/completed
      dnsConfig:
        options:
        - name: ndots
          value: "1"
