k8s/nzbget/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nzbget 
spec:
  replicas: 1
  serviceName: nzbget
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      name: nzbget
      labels:
        app: nzbget
    spec:
      containers:
      - name: nzbget
        image: lscr.io/linuxserver/nzbget:latest
        imagePullPolicy: Always
        ports:
          - name: nzbget
            containerPort: 6789
        volumeMounts:
        - mountPath: "/config"
          name: nzbget-config
        - mountPath: "/downloads/completed"
          name: completed-downloads
        - mountPath: "/downloads/incomplete"
          name: incomplete-downloads
      volumes:
        - name: nzbget-config
          iscsi:
            targetPortal: 10.10.11.5:3260
            iqn: iqn.2000-01.com.synology:Library.nzbget-config
            lun: 1
            fsType: ext4
            readOnly: false
        - name: incomplete-downloads
          hostPath:
            path: /data/k3s/incomplete-downloads
        - name: completed-downloads
          nfs:
            server: library.faircloth.ca
            path: /volume1/downloads/completed
      dnsConfig:
        options:
        - name: ndots
          value: "1"
