k8s/nzbget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
spec:
  rules:
  - http:
      paths:
      - path: /nzbget
        pathType: ImplementationSpecific
        backend:
          service:
            name: nzbget
            port:
              number: 6789
